qt6/src/platformtheme/kdeplatformtheme.cpp
@@ -10,6 +10,7 @@
 #include <config-platformtheme.h>
 
 #include "kdeplatformfiledialoghelper.h"
+#include "kdeplatformfontdialoghelper.h"
 #include "kdeplatformsystemtrayicon.h"
 #include "kdeplatformtheme.h"
 #include "kfontsettingsdata.h"
@@ -383,7 +384,7 @@ QList<QKeySequence> KdePlatformTheme::keyBindings(QKeySequence::StandardKey key)
 
 bool KdePlatformTheme::usePlatformNativeDialog(QPlatformTheme::DialogType type) const
 {
-    return type == QPlatformTheme::FileDialog && qobject_cast<QApplication *>(QCoreApplication::instance());
+    return (type == QPlatformTheme::FileDialog || type == QPlatformTheme::FontDialog) && qobject_cast<QApplication *>(QCoreApplication::instance());
 }
 
 QString KdePlatformTheme::standardButtonText(int button) const
@@ -443,6 +444,7 @@ QPlatformDialogHelper *KdePlatformTheme::createPlatformDialogHelper(QPlatformThe
         }
         return new KDEPlatformFileDialogHelper;
     case QPlatformTheme::FontDialog:
+        return new KDEPlatformFontDialogHelper;
     case QPlatformTheme::ColorDialog:
     case QPlatformTheme::MessageDialog:
     default:
